# openapi/openapi.json
@@ -365,6 +365,47 @@
         }
       }
     },
+    "/location": {
+      "get": {
+        "tags": [
+          "location-controller"
+        ],
+        "operationId": "getLocationsByCountyAndCity",
+        "parameters": [
+          {
+            "name": "county",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "city",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/LocationDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/events": {
       "get": {
         "tags": [
@@ -390,6 +431,29 @@
                   "type": "array",
                   "items": {
                     "$ref": "#/components/schemas/EventDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/events/allCategories": {
+      "get": {
+        "tags": [
+          "event-controller"
+        ],
+        "operationId": "getCategories",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
                   }
                 }
               }
@@ -490,6 +554,10 @@
           "role": {
             "type": "string"
           },
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
           "city": {
             "type": "string"
           },
@@ -571,6 +639,10 @@
             "items": {
               "$ref": "#/components/schemas/EventDto"
             }
+          },
+          "id": {
+            "type": "integer",
+            "format": "int64"
           }
         }
       },
@@ -592,11 +664,16 @@
           "address",
           "city",
           "county",
+          "id",
           "name",
           "noSeats"
         ],
         "type": "object",
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
           "noSeats": {
             "type": "integer",
             "format": "int64"
